FEAT:arange+coo_matrix+eye

--- a/ITML/CHAPTER1_INTRODUCTION.ipynb
+++ b/ITML/CHAPTER1_INTRODUCTION.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSe/w7clgdLokWLLo6Ty0C",
+      "authorship_tag": "ABX9TyOWV8cuq5MUi6hN/4zXr+0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "qS0503TcRdcQ"
       },
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,14 +80,14 @@
       "metadata": {
         "id": "o4VeNUWsRfAp"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "eyed=np.eye(4)\n",
-        "x=sparse.csr_matrix(eyed)\n",
+        "x=sparse.csr_matrix(eyed)#Compressed Sparse Row\n",
         "print('The matrix is \\n{} which sparse matirx is\\n {}'.format(eyed,x))"
       ],
       "metadata": {
@@ -97,7 +97,7 @@
         "id": "cwkpQbesTFm-",
         "outputId": "e989c7cb-a9b8-4b56-e0af-e05404223048"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "HThd5hCgThtL"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "id": "ueMLF78ddYB_",
         "outputId": "2ab7faab-8618-4581-87af-d4397e3700d7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,6 +183,149 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- `np.ones()` they create a matrix od hape with given *shape/dimension*.\n",
+        "  - ***dtype*** is used to specify data type"
+      ],
+      "metadata": {
+        "id": "ZbGWMwsdPK9-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mat=np.ones((4,2),dtype='str')\n",
+        "print(mat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZTMbjvZPjHi",
+        "outputId": "fac81dd6-2dc8-48df-f6f9-39cc72c40e9a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['1' '1']\n",
+            " ['1' '1']\n",
+            " ['1' '1']\n",
+            " ['1' '1']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- `np.arange()` unlike `linespace` where it will gnerate random vlaues of given numbe rof points but here we use it with `start`,`step` and `end`.\n",
+        "- Thus the step increase is equal."
+      ],
+      "metadata": {
+        "id": "Sm41PVldPy_g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.arange(1,100,7)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wsNKk0N5QYwF",
+        "outputId": "8418ab58-0d64-41a0-d85b-87c76c511b9b"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1  8 15 22 29 36 43 50 57 64 71 78 85 92 99]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.arange(4)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VgOfiyoIRKK0",
+        "outputId": "0995d55d-14ad-4ebb-859a-db3bf64086a9"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- The line `eye_coo = sparse.coo_matrix((data, (row_indices, col_indices)))` is creating a sparse matrix in **COOrdinate (COO) format** using the scipy.sparse module."
+      ],
+      "metadata": {
+        "id": "K-dYDu3pReUh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.sparse import coo_matrix\n",
+        "x=y=np.arange(4)\n",
+        "data=[120,140,200,300]\n",
+        "mat=coo_matrix((data,(x,y)))\n",
+        "print(mat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KW26UCkuRvPY",
+        "outputId": "61210c84-1ca0-4dd1-9c6f-bfb478292041"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  (0, 0)\t120\n",
+            "  (1, 1)\t140\n",
+            "  (2, 2)\t200\n",
+            "  (3, 3)\t300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> ***NOTE*** : Yes, NumPy arrays are homogeneous,such that they conatin only a single type of value."
+      ],
+      "metadata": {
+        "id": "RnaSAg_NTFZQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -191,7 +334,7 @@
       "metadata": {
         "id": "gmt57dKbdge3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +349,7 @@
         "id": "b5di9WECgq5M",
         "outputId": "85beeae7-fdc7-416d-9e37-83a04b48b6de"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +376,7 @@
         "id": "gVzA3yCigs0h",
         "outputId": "b603ae71-f0bc-497f-990c-4fa6624d21de"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +471,7 @@
         "id": "8cSuFEPYhDqY",
         "outputId": "89111824-2c09-47c7-956b-1828900cbfbc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
